test/vm/errors/assert_fail.ach
// Expected error: assertion failure
assert(false)
